[project]
name = "pdf-diff-viewer"
version = "0.1.0"
description = "PDF Diff Viewer, a side-by-side, visual highlight, sync-scroll, PDF comparer, written in Python. Open source, mostly powered by PyMuPDF and Tkinter. Optional support for git diff, for a better comparison algorithm."
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "klembord==0.3.0",
    "macholib==1.16.3",
    "mouseinfo==0.1.3",
    "packaging==25.0",
    "pillow==11.3.0",
    "pyautogui==0.9.54",
    "pygetwindow==0.0.9",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pymsgbox==2.0.1",
    "pymupdf==1.26.4",
    "pyobjc-core==11.1",
    "pyobjc-framework-cocoa==11.1",
    "pyobjc-framework-quartz==11.1",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python3-xlib==0.15",
    "pytweening==1.2.0",
    "rubicon-objc==0.5.2",
    "setuptools==80.9.0",
    "stopit==1.1.2",
    "tkinterdnd2==0.4.3",
]
